Simple ListView Added
Demo for a simple list view.
Click on an item to get its details.
Long click an item to remove it.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.trnkarthik.listviewimplementation.SimpleListViewActivity"
+            android:label="@string/title_activity_simple_list_view" >
+        </activity>
     </application>
 
 </manifest>
