CustomListView with custom objects & multi select
Custom list view with custom objects passed using arraylist.
Used setMultiChoiceModeListener to select multiple items.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name="com.trnkarthik.listviewimplementation.SimpleListViewActivity"
             android:label="@string/title_activity_simple_list_view" >
         </activity>
+        <activity
+            android:name="com.trnkarthik.listviewimplementation.CustomArrayListViewActivity"
+            android:label="@string/title_activity_custom_array_list_view" >
+        </activity>
     </application>
 
 </manifest>
